@@ -1563,6 +1563,16 @@ libgnomecanvas is missing branch definition for gnome-2-20
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
+	  <term><varname>use_local_modulesets</varname></term>
+	  <listitem>
+	    <simpara>A boolean value that specifies to use modulesets
+	    that were checked out along the JHBuild source code; instead
+	    of downloading them on-the-fly from GNOME Subversion repository.
+	    Defaults to <constant>False</constant>.
+	    </simpara>
+	  </listitem>
+	</varlistentry>
+	<varlistentry>
 	  <term><varname>xvfbargs</varname></term>
 	  <listitem>
 	    <simpara>A string listing arguments to pass to
