@@ -127,3 +127,6 @@ jhbuildbot_password = None
 
 # options for jhbuildbot master
 jhbuildbot_svn_commits_box = None
+
+# whether to use a local copy of modulesets (instead of fetching them from svn)
+use_local_modulesets = False
