@@ -1,3 +1,7 @@
+2008-08-24  Frederic Peters  <fpeters@0d.be>
+
+	* C/jhbuild.xml: new use_local_modulesets option.
+
 2008-08-19  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es/es.po: Updated Spanish translation by Daniel Mustieles
