@@ -1,5 +1,11 @@
 2008-08-24  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/config.py, jhbuild/defaults.jhbuildrc, jhbuild/moduleset.py:
+	download modulesets from svn.gnome.org by default, new option
+	(use_local_modulesets) to use the local copy.
+
+2008-08-24  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/buildbot/scheduler.py: don't log every unrelated change
 	notification.
 
